--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0"
@@ -31,5 +32,4 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   }
-
 }
